DataSet optimizations; debugging to check # times can use getXPointsRaw